# SAMap

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SAMap.py  SAMap_iteration.py  SAMap_quickstart.ipynb  SAMap_quickstart_run_example.ipynb  build_image.sh  map_genes.sh  pyproject.toml  run_demo.py  run_image.sh  setup.py
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  build_instructions.txt  reqlist.txt
samap/: __init__.py  analysis.py  mapping.py  utils.py
src/samap/: __init__.py  _constants.py  _logging.py  exceptions.py  utils.py
src/samap/analysis/: __init__.py  enrichment.py  gene_pairs.py  plotting.py  scores.py
src/samap/core/: __init__.py  mapping.py
src/samap/io/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  synthetic_data.py
tests/integration/: __init__.py  test_samap_integration.py
tests/unit/: __init__.py  test_constants.py  test_exceptions.py  test_utils.py
workflow/: README.md  Snakefile  config.yaml
workflow/envs/: blast.yml  fasta-splitter.yml  samap.yml
workflow/example_outputs/: hu_mu.celltype_map.tsv
workflow/scripts/: samap-run  samap-samap
